@@ -215,6 +215,30 @@ set this to -1.
 +
 The default value for this parameter is 0.
 
+*sdcommands*::
+
+Optional.  Comma-separated list of instant command name(s) to send to
+the UPS when you request its shutdown.
++
+Default value is built into each driver (where supported).
++
+The primary use-case is for devices whose drivers "natively" support
+trying several commands, but the built-in order of those calls a
+command that is mis-handled by the specific device model (so the
+handling is reported as successful and the loop stops, but nothing
+happens as far as the load power-down is concerned).
++
+Another use-case is differentiation of automated power-off scenarios
+where the UPS and its load should stay "OFF" (e.g. by building emergency
+power-off) vs. those where the load should return to work automatically
+when it is safe to do so.  NOTE: This would *currently* need editing of
+`ups.conf` for such cases before `nutshutdown` sees the file; but could
+be better automated in future NUT releases.
++
+NOTE: User-provided commands may be something other than actual shutdown,
+e.g. a beeper to test that the INSTCMD happened such and when expected,
+and the device was contacted, without impacting the load fed by the UPS.
+
 *allow_killpower*::
 Optional.  This allows you to request `driver.killpower` instant command,
 to immediately call the driver-specific default implementation of
